# DA-Permutations

./: README.md  errors.py  lexicographic.py  pyproject.toml  test_lexicographic.py  test_trotter_johnson.py  trotter_johnson.py  util.py
