[tool.poetry]
name = "combinatorials"
version = "0.1.0"
description = ""
authors = ["vronsyn <victor.ronsyn@ugent.be>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
pytest = "^8.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
